--- a/project/css/style.css
+++ b/project/css/style.css
@@ -26,7 +26,7 @@ h2 {
     margin-bottom: 30px;
 }
 
-h2.left {
+h2.left, h3.left {
     text-align: left;
 }
 
@@ -113,7 +113,7 @@ ol {
     flex-wrap: wrap;
 }
 
-.product_benefits h2, .buy_it_now h2, footer h2 {
+.product_benefits h2, .scrinshots h2, .rewiews h2, .buy_it_now h2, footer h2 {
     width: 100%;
 }
 
@@ -152,11 +152,68 @@ ol {
 
 .scrinshots {
     min-height: 425px;
+    display: flex;
+    flex-wrap: wrap;
 }
+
+.scrinshots .screen_item {
+    width: 50%;
+    margin-bottom: 10px;
+} 
+
+.scrinshots .screen_item img {
+    float: left;
+}
+
+.scrinshots .screen_item h3, .scrinshots .screen_item p {
+    margin-left: 200px;
+    padding: 0 25px 0 15px;    
+} 
 
 .rewiews {
     min-height: 425px;
+    display: flex;
+    flex-wrap: wrap;    
 }
+
+.rewiews .rewiews_item {
+    width: 50%;
+} 
+
+.rewiews .rewiews_item figure {
+    float: left;
+    width: 120px;
+    text-align: center;
+}
+
+.rewiews .rewiews_item figure img {
+    border-radius: 50%;
+}
+
+.rewiews .rewiews_item p {
+    position: relative;
+    border-radius: 5px;
+    background-color: #f0f0f0;
+    margin-left: 120px;
+    padding: 16px 20px 16px 15px;
+    font: 400 italic 14px/18px Arial, sans-serif; 
+} 
+
+.rewiews .rewiews_item p:before {
+  position: absolute;
+  top: 20px;
+  left: -30px;    
+  content: "";
+  border: 20px solid transparent;   
+  border-right: 20px solid #f0f0f0;
+}
+
+.rewiews .rewiews_item p span {
+    display: block; 
+    margin-top: 15px; 
+    font-style: normal;
+    color: #989898; 
+} 
 
 .buy_it_now {
     min-height: 655px;
@@ -209,8 +266,9 @@ ol {
     text-transform: uppercase;
 } 
 
-.buy_it_now button:hover {
-    background-color: #f5f5f5;
+.buy_it_now button:hover, .buy_it_now button:active {
+    background-color: #aaa;
+    color: #fff;
 }
 
 .buy_it_now button:focus {
@@ -249,7 +307,7 @@ footer .contacts_form {
 
 .contacts_form form .t_date, .contacts_form form textarea {
     width: 500px;
-    margin: 15px 0;
+    margin-bottom: 20px;
     padding: 10px;
 }
 
@@ -261,7 +319,6 @@ footer .contacts_form {
 .contacts_form form input:focus, .contacts_form form textarea:focus {
     outline: none;
 }
-
 
 ::-webkit-input-placeholder {
     color:#445161;
@@ -279,13 +336,81 @@ footer .contacts_form {
     color:#445161;
 }
 
-
 .contacts_form form input[type="submit"] {
     width: 140px;
 } 
 
-.contacts_form form input[type="submit"]:hover {
-    background-color: #f5f5f5;
+.contacts_form form input[type="submit"]:hover, .contacts_form form input[type="submit"]:active {
+    background-color: #aaa;
+    color: #fff;
+}
+
+.social_icons span {
+    position: relative;
+    display: block;
+    margin-bottom: 15px;
+}
+
+.social_icons span:before {
+    position: absolute;
+    left: -32px;
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    width: 26px;
+    height: 26px;
+    background-image: url('../img/icon_sprite.png');
+    background-repeat: no-repeat;
+}
+
+.social_icons span.icq:before {
+    background-position: -26px 0; 
+}
+
+.social_icons span.e-mail:before {
+    background-position: -52px 0; 
+}
+
+.social_icons span.phone:before {
+    background-position: -76px 0; 
+}
+
+.social_media {
+    margin-top: 40px;
+    margin-left: -32px;
+}
+
+.social_media i {
+    margin-right: 3px;
+    border-radius: 50%;
+    background-color: #fff;
+    font-size: 22px;    
+    color: #445161;        
+}
+
+.social_media i.fa-twitter {
+    padding: 10px 10px;
+}
+
+.social_media i.fa-facebook-f {
+    padding: 10px 15px;
+}
+
+.social_media i.fa-linkedin-in {
+    padding: 10px 12px;
+}
+
+.social_media i.fa-google {
+    padding: 10px 11px;
+}
+
+.social_media i.fa-youtube {
+    padding: 10px 9px;
+}
+
+.social_media i:hover, .social_media i:active {
+    background-color: #aaa;
+    color: #fff;        
 }
 
 .copyright {
